--- a/product-details-book.html
+++ b/product-details-book.html
@@ -206,20 +206,20 @@
             <div class="col-md-6">
                 <div class="product_details_imgs flex justify-start items-start flex-col gap-3 relative">
                     <div class="big_img border border-solid border-[#ebebeb] rounded-[6px] p-4 sm:h-[400px] h-[300px] w-100">
-                        <img src="./assets/images/product-d-1.jpg" alt="products" loading="lazy" class="h-100 w-100 object-contain large_image">
+                        <img src="./assets/images/product-d-6.jpg" alt="products" loading="lazy" class="h-100 w-100 object-contain large_image">
                     </div>
                     <div class="small_imgs flex justify-start items-start flex-row gap-3 overflow-x-scroll">
                         <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
-                            <img src="./assets/images/product-d-2.jpg" alt="product" class="w-100 h-100 small_image">
+                            <img src="./assets/images/product-d-7.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
                         <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
-                            <img src="./assets/images/product-d-3.jpg" alt="product" class="w-100 h-100 small_image">
+                            <img src="./assets/images/product-d-8.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
                         <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
-                            <img src="./assets/images/product-d-4.jpg" alt="product" class="w-100 h-100 small_image">
+                            <img src="./assets/images/product-d-9.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
                         <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
-                            <img src="./assets/images/product-d-5.jpg" alt="product" class="w-100 h-100 small_image">
+                            <img src="./assets/images/product-d-10.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
                     </div>
                     <span class="absolute top-5 right-5 bg-primary-color text-white font-medium text-[16px] py-[4px] px-[15px] rounded-[6px]"> جديد </span>
@@ -228,8 +228,8 @@
             <div class="col-md-6">
                 <div class="product_details_info flex justify-start items-start flex-col sm:gap-[16px] gap-[12px] md:mt-[0px] mt-[16px]">
                     <span class="bg-second-color text-primary-color font-medium sm:text-[16px] text-[14px] py-[4px] sm:px-[15px] px-[11px] rounded-[6px]"> التاجر </span>
-                    <span class="text-fourth-color sm:text-[14px] text-[13px] text-medium"> أجهزة و تكنولوجيا </span>
-                    <h1 class="text-third-color font-semibold text-[27px] mb-0"> موبايل أيفون 15 برو ماكس , 512GB </h1>
+                    <span class="text-fourth-color sm:text-[14px] text-[13px] text-medium"> كتب و روايات </span>
+                    <h1 class="text-third-color font-semibold text-[27px] mb-0"> كتاب يحكي عن تاريخ الفلسفة الغربية </h1>
                     <div class="reviews_products flex justify-start items-center flex-row gap-2">
                         <div class="stars flex justify-start items-center flex-row gap-1">
                             <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
@@ -246,47 +246,9 @@
                     </div>
                     <p class="text-fourth-color sm:text-[15px] text-[14px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
                     <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> SKU : HFKUHB58POLMQE </span>
-                    
-                    <form action="" class="flex justify-start items-start flex-col gap-3">
-                      <div class="product-size">
-                        <div class=" product-chosse-size  flex justify-start items-center flex-row gap-3">
-                            <label for="xs" class="size-button">xs
-                                <input type="radio" id="">
-                            </label>
-                            <label for="s" class="size-button">S
-                                <input type="radio" id="">
-                            </label>
-                            <label for="m" class="size-button">M
-                                <input type="radio" id="">
-                            </label>
-                            <label for="l" class="size-button">L
-                                <input type="radio" id="">
-                            </label>
-                            <label for="xl" class="size-button">XL
-                                <input type="radio" id="">
-                            </label>
-                        </div>
-                    </div>
-                    <div class="product-color">
-                        <div class=" product-chosse-color flex justify-start items-center flex-row gap-3">
-                            <label for="" class="black color-button" style="background-color:#000;">
-                                <input type="radio">
-                            </label>
-                            <label for="" class="red color-button" style="background-color:#ed1c24;">
-                                <input type="radio">
-                            </label>
-                            <label for="" class="yellow color-button" style="background-color:#f1af4d;">
-                                <input type="radio">
-                            </label>
-                            <label for="" class="brown color-button" style="background-color:#636068;">
-                                <input type="radio">
-                            </label>
-                            <label for="" class="pink color-button" style="background-color:#e8bac4;">
-                                <input type="radio">
-                            </label>
-                        </div>
-                    </div>
-                    </form>
+                    <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> الناشر : أحمد يسري </span>
+                    <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> عدد الصفحات :  150 صفحة </span>
+                    <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> اللغة  :  عربي - انجليزية - فرنسية  </span>
                     <div>
                         <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[250px] flex justify-between items-center flex-row h-[50px]">
                             <div class="value-button text-[20px] cursor-pointer" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
