--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         <div class="col-md-3 col-6">
           <div class="product__item border border-solid border-[#ececec] rounded-[15px] relative py-2 mb-4">
             <div class="product__img relative">
-              <a href="product-details.html">
+              <a href="product-details-shirt.html">
                 <img src="./assets/images/shirt.webp" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
               </a>
               <div class="product__actions flex justify-center items-center flex-row">
@@ -675,7 +675,7 @@
               </div>
             </div>
             <div class="product__info flex justify-start items-start flex-col gap-2 p-2">
-              <a href="product-details.html" class="flex justify-start items-start flex-col gap-2">
+              <a href="product-details-shirt.html" class="flex justify-start items-start flex-col gap-2">
                 <span class="text-fourth-color sm:text-[13px] text-[12px] font-normal"> دعاية و إعلان </span>
                 <h1 class="text-third-color font-semibold sm:text-[15px] text-[13px] m-0 leading-[1.5]"> تيشيرت طباعة </h1>
                 <div class="stars flex justify-start items-center flex-row gap-1">
@@ -934,7 +934,6 @@
     </div>
     <!-- products -->
 
-
     <!-- stores -->
     <div class="stores py-[40px] lg:px-[100px] px-[20px]">
       <h2 class="text-third-color font-semibold text-[25px] mb-4"> المتاجر المشتركة </h2>
@@ -989,7 +988,7 @@
             <div class="product__item border border-solid border-[#ececec] rounded-[15px] relative py-2 mb-4">
               <div class="flex justify-start items-start flex-row gap-3 w-100">
                 <div class="product__img relative w-50">
-                  <a href="product-details.html">
+                  <a href="product-details-book.html">
                     <img src="./assets/images/novel2.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                   </a>
                   
@@ -999,7 +998,7 @@
                   </div>
                 </div>
                 <div class="product__info flex justify-start items-start flex-col gap-2 p-2 w-100">
-                  <a href="product-details.html" class="flex justify-start items-start flex-col gap-2">
+                  <a href="product-details-book.html" class="flex justify-start items-start flex-col gap-2">
                     <span class="text-fourth-color text-[13px] font-normal"> روايات </span>
                     <h1 class="text-third-color font-semibold text-[15px] m-0 leading-[1.5]"> كتاب يحكي عن تاريخ الفلسفة الغربية  </h1>
                     <div class="stars flex justify-start items-center flex-row gap-1">
