--- a/product-details-shirt.html
+++ b/product-details-shirt.html
@@ -429,6 +429,69 @@
      </div>
     <!-- product details -->
 
+    <div class="features_website py-[50px] lg:px-[100px] px-[20px]">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="flex justify-start items-center flex-row gap-2 sm:mb-0 mb-3">
+            <svg width="65" height="65" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12.0007 14H13.0007C14.1007 14 15.0007 13.1 15.0007 12V2H6.00073C4.50073 2 3.19074 2.82999 2.51074 4.04999" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M2.00098 17C2.00098 18.66 3.34098 20 5.00098 20H6.00098C6.00098 18.9 6.90098 18 8.00098 18C9.10098 18 10.001 18.9 10.001 20H14.001C14.001 18.9 14.901 18 16.001 18C17.101 18 18.001 18.9 18.001 20H19.001C20.661 20 22.001 18.66 22.001 17V14H19.001C18.451 14 18.001 13.55 18.001 13V10C18.001 9.45 18.451 9 19.001 9H20.291L18.581 6.01001C18.221 5.39001 17.561 5 16.841 5H15.001V12C15.001 13.1 14.101 14 13.001 14H12.001" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M8.00098 22C9.10555 22 10.001 21.1046 10.001 20C10.001 18.8954 9.10555 18 8.00098 18C6.89641 18 6.00098 18.8954 6.00098 20C6.00098 21.1046 6.89641 22 8.00098 22Z" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M16.001 22C17.1055 22 18.001 21.1046 18.001 20C18.001 18.8954 17.1055 18 16.001 18C14.8964 18 14.001 18.8954 14.001 20C14.001 21.1046 14.8964 22 16.001 22Z" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M22.001 12V14H19.001C18.451 14 18.001 13.55 18.001 13V10C18.001 9.45 18.451 9 19.001 9H20.291L22.001 12Z" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M2.00098 8H8.00098" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M2.00098 11H6.00098" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M2.00098 14H4.00098" stroke="#3BB77E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <div class="flex justify-start items-start flex-col gap-1">
+                <h5 class="text-third-color font-semibold text-[18px] mb-0"> شحن مجاني </h5>
+                <span class="text-fourth-color font-medium text-[15px] mb-0"> شحن مجاني على كل الطلبات </span>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="flex justify-start items-center flex-row gap-2  sm:mb-0 mb-3">
+            <svg width="65" height="65" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M22.0005 9.25H2.00049C1.59049 9.25 1.25049 8.91 1.25049 8.5C1.25049 8.09 1.59049 7.75 2.00049 7.75H22.0005C22.4105 7.75 22.7505 8.09 22.7505 8.5C22.7505 8.91 22.4105 9.25 22.0005 9.25Z" fill="#3BB77E"/>
+              <path d="M8.00049 17.25H6.00049C5.59049 17.25 5.25049 16.91 5.25049 16.5C5.25049 16.09 5.59049 15.75 6.00049 15.75H8.00049C8.41049 15.75 8.75049 16.09 8.75049 16.5C8.75049 16.91 8.41049 17.25 8.00049 17.25Z" fill="#3BB77E"/>
+              <path d="M14.5005 17.25H10.5005C10.0905 17.25 9.75049 16.91 9.75049 16.5C9.75049 16.09 10.0905 15.75 10.5005 15.75H14.5005C14.9105 15.75 15.2505 16.09 15.2505 16.5C15.2505 16.91 14.9105 17.25 14.5005 17.25Z" fill="#3BB77E"/>
+              <path d="M17.5605 21.25H6.44049C2.46049 21.25 1.25049 20.05 1.25049 16.11V7.89C1.25049 3.95 2.46049 2.75 6.44049 2.75H17.5505C21.5305 2.75 22.7405 3.95 22.7405 7.89V16.1C22.7505 20.05 21.5405 21.25 17.5605 21.25ZM6.44049 4.25C3.30049 4.25 2.75049 4.79 2.75049 7.89V16.1C2.75049 19.2 3.30049 19.74 6.44049 19.74H17.5505C20.6905 19.74 21.2405 19.2 21.2405 16.1V7.89C21.2405 4.79 20.6905 4.25 17.5505 4.25H6.44049Z" fill="#3BB77E"/>
+              </svg>
+              
+              <div class="flex justify-start items-start flex-col gap-1">
+                <h5 class="text-third-color font-semibold text-[18px] mb-0"> الدفع </h5>
+                <span class="text-fourth-color font-medium text-[15px] mb-0"> الدفع أمن 100%</span>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="flex justify-start items-center flex-row gap-2 sm:mb-0 mb-3">
+            <svg width="65" height="65" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2.74982 18.65C2.33982 18.65 1.99982 18.31 1.99982 17.9V12.2C1.94982 9.48999 2.95982 6.92999 4.83982 5.00999C6.71982 3.09999 9.23982 2.04999 11.9498 2.04999C17.4898 2.04999 21.9998 6.55999 21.9998 12.1V17.8C21.9998 18.21 21.6598 18.55 21.2498 18.55C20.8398 18.55 20.4998 18.21 20.4998 17.8V12.1C20.4998 7.38999 16.6698 3.54999 11.9498 3.54999C9.63982 3.54999 7.49982 4.43999 5.90982 6.05999C4.30982 7.68999 3.45982 9.85999 3.49982 12.18V17.89C3.49982 18.31 3.16982 18.65 2.74982 18.65Z" fill="#3BB77E"/>
+              <path d="M5.94 12.45H5.81C3.71 12.45 2 14.16 2 16.26V18.14C2 20.24 3.71 21.95 5.81 21.95H5.94C8.04 21.95 9.75 20.24 9.75 18.14V16.26C9.75 14.16 8.04 12.45 5.94 12.45Z" fill="#3BB77E"/>
+              <path d="M18.19 12.45H18.06C15.96 12.45 14.25 14.16 14.25 16.26V18.14C14.25 20.24 15.96 21.95 18.06 21.95H18.19C20.29 21.95 22 20.24 22 18.14V16.26C22 14.16 20.29 12.45 18.19 12.45Z" fill="#3BB77E"/>
+              </svg>
+              
+              <div class="flex justify-start items-start flex-col gap-1">
+                <h5 class="text-third-color font-semibold text-[18px] mb-0"> خدمة عملاء </h5>
+                <span class="text-fourth-color font-medium text-[15px] mb-0"> خدمة عملاء 24 / 7</span>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="flex justify-start items-center flex-row gap-2 sm:mb-0 mb-3">
+            <svg width="65" height="65" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path opacity="0.4" d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="#3BB77E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M8.5 14.6667C8.5 15.9553 9.54467 17 10.8333 17H13C14.3807 17 15.5 15.8807 15.5 14.5C15.5 13.1193 14.3807 12 13 12H11C9.61929 12 8.5 10.8807 8.5 9.5C8.5 8.11929 9.61929 7 11 7H13.1667C14.4553 7 15.5 8.04467 15.5 9.33333M12 5.5V7M12 17V18.5" stroke="#3BB77E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <div class="flex justify-start items-start flex-col gap-1">
+              <h5 class="text-third-color font-semibold text-[18px] mb-0"> استرجاع</h5>
+              <span class="text-fourth-color font-medium text-[15px] mb-0"> يمكنك الأسترجاع خلال 7 أيام </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="bg-[#fff] py-[20px] sm:px-[50px] px-[20px] border-t border-solid border-[#e3e3e3]">
         <div class="row">
