--- a/login.html
+++ b/login.html
@@ -200,36 +200,31 @@
     </div>
     <!-- navbar -->
 
-    <div class="auth__layout h-full">
+    <div class="auth__layout h-full pb-5">
         <div class="row">
             <div class="col-lg-6">
-                <div class="auth_layout_img bg-[#553CDF] h-[100%] w-full justify-center items-center flex-row hidden lg:flex">
-                    <img src="./assets/images/login-bg.webp" alt="img" height="500" width="600" loading="lazy">
+                <div class="auth_layout_img bg-primary-color h-[100%] w-full justify-center items-center flex-row hidden lg:flex">
+                    <img src="./assets/images/add-cart.svg" alt="img" height="500" width="500" loading="lazy">
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="auth__form bg-[#fff] sm:p-[40px] p-[20px]">
-                    <div class="img_logo">
-                      <a href="./index.html">
-                        <img src="./assets/images/logo.png" alt="logo" width="120" height="120" loading="lazy">
-                      </a>
-                    </div>
-                    <div class="form !bg-[#fff] border border-solid border-[#DDD8F9] rounded-lg py-[20px] sm:py-[40px] px-[12px] sm:px-[25px] mt-[35px]" style="box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);">
+                <div class="auth__form bg-[#fff] sm:px-[40px] px-[20px]">
+                    <div class="form !bg-[#fff] border border-solid border-[#DDD8F9] rounded-lg py-[15px] sm:py-[20px] px-[12px] sm:px-[25px] mt-[35px]" style="box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);">
                         <h2 class="text-third-color font-semibold text-[20px] flex justify-center items-center flex-row w-full mb-[35px]"> تسجيل الدخول 👋 </h2>
                         <form action="">
                             <div class="mb-3">
                                 <label for="" class="form-label text-third-color font-semibold text-[16px] mb-2"> البريد الألكتروني </label>
-                                <input type="email" class="form-control form-control-lg" id="" placeholder="البريد الألكتروني">
+                                <input type="email" class="form-control" id="" placeholder="البريد الألكتروني">
                             </div>
                             <div class="mb-3">
                                 <label for="" class="form-label text-third-color font-semibold text-[16px] mb-2"> كلمة المرور </label>
-                                <input type="password" class="form-control form-control-lg" id="" placeholder="كلمة المرور">
+                                <input type="password" class="form-control" id="" placeholder="كلمة المرور">
                             </div>
                             <div class="mb-3">
                                 <a href="./forget-password.html" class="text-primary-color font-medium text-[16px]"> هل نسيت كلمة المرور ؟  </a>
                             </div>
                             <div class="my-3">
-                                <button type="submit" class="w-full bg-primary-color text-second-color font-semibold text-[17px] rounded-lg py-[12px] px-[20px]"> تسجيل الدخول </button>
+                                <button type="submit" class="w-full bg-primary-color text-white font-semibold text-[17px] rounded-lg py-[12px] px-[20px]"> تسجيل الدخول </button>
                             </div>
                             <hr>
                             <div class="auth__platforms my-4 flex justify-center items-center flex-col gap-3">
@@ -239,10 +234,10 @@
                                         <img src="./assets/images/facebook.svg" alt="facebook">
                                     </button>
                                     <button> 
-                                        <img src="./assets/images/twitter.svg" alt="facebook">
+                                        <img src="./assets/images/twitter.svg" alt="twitter">
                                     </button>
                                     <button> 
-                                        <img src="./assets/images/google.svg" alt="facebook">
+                                        <img src="./assets/images/google.svg" alt="google">
                                     </button>
                                 </div>
                             </div>
