--- a/confirm-password.html
+++ b/confirm-password.html
@@ -221,7 +221,7 @@
                                 <input type="password" class="form-control" id="" placeholder="تأكيد كلمة المرور">
                             </div>
                             <div class="my-5">
-                                <button type="submit" class="w-full bg-primary-color text-second-color font-semibold text-[17px] rounded-lg py-[12px] px-[20px]"> تأكيد </button>
+                                <button type="submit" class="w-full bg-primary-color text-white font-semibold text-[17px] rounded-lg py-[12px] px-[20px]"> تأكيد </button>
                             </div>
                         </form>
                     </div>
