--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
     <div class="be__store bg-second-color p-5 flex justify-center items-center flex-col gap-3">
       <h2 class="text-primary-color sm:text-[35px] text-[25px] font-semibold text-center"> كن متجر مشارك معنا </h2>
       <p class="text-primary-color sm:text-[20px] text-[18px] font-medium text-center"> يمكنك مشاهدة منتجاتك وجذب شريحة جديدة من المستخدمين </p>
-      <a href="" class="text-white sm:text-[20px] text-[16px] font-semibold bg-primary-color  flex justify-center items-center sm:py-[10px] py-[6px] sm:px-[30px] px-[15px] rounded-[8px]"> سـجـل كـبـائـع </a>
+      <a href="./be-store.html" class="text-white sm:text-[20px] text-[16px] font-semibold bg-primary-color  flex justify-center items-center sm:py-[10px] py-[6px] sm:px-[30px] px-[15px] rounded-[8px]"> سـجـل كـبـائـع </a>
     </div>
     <!-- be store -->
 
