--- a/stores.html
+++ b/stores.html
@@ -437,6 +437,21 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 justify-center items-center">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">
+                            <a class="page-link" href="#">التالي</a>
+                        </li>
+                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item disabled">
+                          <a class="page-link">السابق</a>
+                        </li>
+                    </ul>
+                  </nav>
+            </div>
         </div>
      </div>
     <!-- stores -->
