--- a/stores.html
+++ b/stores.html
@@ -104,7 +104,7 @@
               </div>
               <ul class="lg:hidden flex justify-start items-start flex-col gap-3 mb-0">
                 <li>
-                  <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
+                  <a href="./index.html" class="text-primary-color text-[18px] font-medium "> الرئيسية </a>
                 </li>
                 <li>
                   <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
@@ -116,7 +116,7 @@
                   <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
                 </li>
                 <li>
-                  <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
+                  <a href="./stores.html" class="text-third-color text-[18px] font-medium active"> المتاجر </a>
                 </li>
               </ul>
               <div class="flex justify-start items-center lg:flex-row sm:flex-col flex-wrap gap-4 relative">
@@ -169,7 +169,7 @@
       </button>
       <ul class="flex justify-start items-center flex-row gap-3 mb-0">
         <li>
-          <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
+          <a href="./index.html" class="text-third-color text-[18px] font-medium"> الرئيسية </a>
         </li>
         <li>
           <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
@@ -181,7 +181,7 @@
           <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
         </li>
         <li>
-          <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
+          <a href="./stores.html" class="text-primary-color text-[18px] font-medium active"> المتاجر </a>
         </li>
       </ul>
       <div class="flex justify-start items-center flex-row gap-2">
