--- a/store-details.html
+++ b/store-details.html
@@ -305,31 +305,31 @@
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model5">
                                                     <label class="form-check-label" for="model5">
-                                                        Zara
+                                                        ماركة 1
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model1">
                                                     <label class="form-check-label" for="model1">
-                                                        ZARA
+                                                         ماركة 2
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model2">
                                                     <label class="form-check-label" for="model2">
-                                                        ZARA
+                                                         ماركة 3
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model3">
                                                     <label class="form-check-label" for="model3">
-                                                        ZARA
+                                                         ماركة 4
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model4">
                                                     <label class="form-check-label" for="model4">
-                                                        ZARA
+                                                         ماركة 5
                                                     </label>
                                                 </div>
                                             </div>
@@ -349,31 +349,31 @@
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="categ1">
                                                     <label class="form-check-label" for="categ1">
-                                                        عبايات مناسبات
+                                                        تصنيف 1
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="categ2">
                                                     <label class="form-check-label" for="categ2">
-                                                        عبايات استقبال
+                                                        تصنيف 2
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="categ3">
                                                     <label class="form-check-label" for="categ3">
-                                                        مكياج
+                                                        تصنيف 3
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="categ4">
                                                     <label class="form-check-label" for="categ4">
-                                                        عطور
+                                                        تصنيف 4
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="categ5">
                                                     <label class="form-check-label" for="categ5">
-                                                        إاكسسوارات
+                                                        تصنيف 5
                                                     </label>
                                                 </div>
                                             </div>
@@ -484,51 +484,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header" id="panelsStayOpen-sale">
-                                            <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour"
-                                                aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                                                التخفيضات
-                                            </button>
-                                        </h2>
-                                        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
-                                            aria-labelledby="panelsStayOpen-sale">
-                                            <div class="accordion-body">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="all">
-                                                    <label class="form-check-label" for="all">
-                                                        عبايات مناسبات
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="sale1">
-                                                    <label class="form-check-label" for="sale1">
-                                                        عبايات استقبال
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="check3">
-                                                    <label class="form-check-label" for="check3">
-                                                        مكياج
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="check4">
-                                                    <label class="form-check-label" for="check4">
-                                                        عطور
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="check5">
-                                                    <label class="form-check-label" for="check5">
-                                                        إاكسسوارات
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-            
                                 </div>
                                 <div class="py-3">
                                     <p class="price-range">
