--- a/categories.html
+++ b/categories.html
@@ -260,7 +260,7 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix"
                                                 aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
-                                                الماركات
+                                                الأقسام
                                             </button>
                                         </h2>
                                         <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse"
@@ -269,31 +269,31 @@
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model5">
                                                     <label class="form-check-label" for="model5">
-                                                        ماركة 1
+                                                        قسم 1
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model1">
                                                     <label class="form-check-label" for="model1">
-                                                         ماركة 2
+                                                         قسم 2
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model2">
                                                     <label class="form-check-label" for="model2">
-                                                         ماركة 3
+                                                         قسم 3
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model3">
                                                     <label class="form-check-label" for="model3">
-                                                         ماركة 4
+                                                         قسم 4
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="model4">
                                                     <label class="form-check-label" for="model4">
-                                                         ماركة 5
+                                                         قسم 5
                                                     </label>
                                                 </div>
                                             </div>
@@ -467,7 +467,7 @@
                     </div>
                 </div>
                 <div class="col-md-9">
-                    <div class="popular__products mt-5">
+                    <div class="popular__products">
                         <div class="row">
                             <div class="col-md-4 col-6">
                                 <div class="product__item border border-solid border-[#ececec] rounded-[15px] relative py-2 mb-4">
