--- a/index.html
+++ b/index.html
@@ -982,7 +982,10 @@
 
     <!-- products -->
       <div class="popular__products pt-[40px] lg:px-[100px] px-[20px]">
-        <h2 class="text-third-color font-semibold text-[25px] mb-4"> أحدث العروض </h2>
+        <div class="flex justify-between items-center flex-row flex-wrap w-100 mb-4">
+          <h2 class="text-third-color font-semibold text-[25px]"> أحدث العروض </h2>
+          <a href="./offers.html" class="text-primary-color font-medium text-[15px] !underline"> كل العروض </a>
+        </div>
         <div class="row">
           <div class="col-md-6">
             <div class="product__item border border-solid border-[#ececec] rounded-[15px] relative py-2 mb-4">
