--- a/cart.html
+++ b/cart.html
@@ -310,7 +310,7 @@
                         <h5 class="text-third-color font-semibold text-[18px]"> الإجمالي </h5>
                         <p class="text-fourth-color font-semibold text-[15px]"> 1100 ر.س </p>
                     </div>
-                    <button class="mt-4 bg-primary-color text-white font-medium text-[18px] w-100 py-[10px] px-[15px] rounded-[6px]"> إتمام عملية الشراء </button>
+                    <a href="./checkout.html" class="mt-4 bg-primary-color text-white font-medium text-[18px] w-100 py-[10px] px-[15px] rounded-[6px] w-100 flex justify-center items-center"> إتمام عملية الشراء </a>
                 </div>
             </div>
         </div>
