--- a/index.html
+++ b/index.html
@@ -1475,23 +1475,63 @@
 
 
     <!-- Modal quickView -->
-    <!-- <div class="modal fade" id="quickView" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+    <div class="modal fade" id="quickView" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl">
         <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
           <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <div class="row">
+              <div class="col-md-6">
+                  <div class="product_details_imgs flex justify-start items-start flex-col gap-3 relative">
+                      <div class="big_img border border-solid border-[#ebebeb] rounded-[6px] p-4 sm:h-[400px] h-[300px] w-100">
+                          <img src="./assets/images/product-d-1.jpg" alt="products" loading="lazy" class="h-100 w-100 object-contain large_image">
+                      </div>
+                      <div class="small_imgs flex justify-start items-start flex-row gap-3 overflow-x-scroll">
+                          <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[100px] sm:h-[100px] w-[65px] h-[65px]">
+                              <img src="./assets/images/product-d-2.jpg" alt="product" class="w-100 h-100 small_image">
+                          </div>
+                          <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[100px] sm:h-[100px] w-[65px] h-[65px]">
+                              <img src="./assets/images/product-d-3.jpg" alt="product" class="w-100 h-100 small_image">
+                          </div>
+                          <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[100px] sm:h-[100px] w-[65px] h-[65px]">
+                              <img src="./assets/images/product-d-4.jpg" alt="product" class="w-100 h-100 small_image">
+                          </div>
+                          <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[100px] sm:h-[100px] w-[65px] h-[65px]">
+                              <img src="./assets/images/product-d-5.jpg" alt="product" class="w-100 h-100 small_image">
+                          </div>
+                      </div>
+                      <span class="absolute top-5 right-5 bg-primary-color text-white font-medium text-[16px] py-[4px] px-[15px] rounded-[6px]"> جديد </span>
+                  </div>
+              </div>
+              <div class="col-md-6">
+                  <div class="product_details_info flex justify-start items-start flex-col sm:gap-[16px] gap-[12px] md:mt-[0px] mt-[16px]">
+                      <span class="bg-second-color text-primary-color font-medium sm:text-[16px] text-[14px] py-[4px] sm:px-[15px] px-[11px] rounded-[6px]"> التاجر </span>
+                      <span class="text-fourth-color sm:text-[14px] text-[13px] text-medium"> أجهزة و تكنولوجيا </span>
+                      <h1 class="text-third-color font-semibold text-[27px] mb-0"> موبايل أيفون 15 برو ماكس , 512GB </h1>
+                      <div class="reviews_products flex justify-start items-center flex-row gap-2">
+                          <div class="stars flex justify-start items-center flex-row gap-1">
+                              <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                              <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                              <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                              <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                              <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                          </div>
+                          <span class="text-fourth-color sm:text-[13px] text-[12px] text-medium"> ( 32 تقييم ) </span>
+                      </div>
+                      <div class="price__prodcut flex justify-start items-center flex-row gap-3">
+                          <span class="text-primary-color font-bold sm:text-[27px] text-[22px]"> 150 ر.س </span>
+                          <span class="text-fourth-color sm:text-[15px] text-[13px] text-medium line-through"> 200 ر.س </span>
+                      </div>
+                      <p class="text-fourth-color sm:text-[15px] text-[14px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                      <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> SKU : HFKUHB58POLMQE </span>
+                  </div>
+              </div>
+              </div>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
+    <!-- Modal quickView -->
+
     <script src="./assets/js/jquery.js"></script>
     <script src="./assets/js/wow.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
