--- a/wishlist.html
+++ b/wishlist.html
@@ -126,18 +126,20 @@
                     <path d="M20.5901 22C20.5901 18.13 16.7402 15 12.0002 15C7.26015 15 3.41016 18.13 3.41016 22" stroke="#253D4E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>         
                 </a>
-                <a href="./cart.html" class="cart">
+                <a href="./cart.html" class="cart relative">
                   <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 2H3.74001C4.82001 2 5.67 2.93 5.58 4L4.75 13.96C4.61 15.59 5.89999 16.99 7.53999 16.99H18.19C19.63 16.99 20.89 15.81 21 14.38L21.54 6.88C21.66 5.22 20.4 3.87 18.73 3.87H5.82001" stroke="#253D4E" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M16.25 22C16.9404 22 17.5 21.4404 17.5 20.75C17.5 20.0596 16.9404 19.5 16.25 19.5C15.5596 19.5 15 20.0596 15 20.75C15 21.4404 15.5596 22 16.25 22Z" stroke="#253D4E" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M8.25 22C8.94036 22 9.5 21.4404 9.5 20.75C9.5 20.0596 8.94036 19.5 8.25 19.5C7.55964 19.5 7 20.0596 7 20.75C7 21.4404 7.55964 22 8.25 22Z" stroke="#253D4E" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M9 8H21" stroke="#253D4E" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>                                       
+                  </svg>
+                  <span class="bg-primary-color text-white text-[12px] font-medium w-[20px] h-[20px] rounded-[50%] flex justify-center items-center absolute top-[-8px] right-[-10px]"> 4 </span>                                       
                 </a>
-                <a href="./wishlist.html" class="wishlist">
+                <a href="./wishlist.html" class="wishlist relative">
                   <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#253D4E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>                    
+                  </svg>    
+                  <span class="bg-primary-color text-white text-[12px] font-medium w-[20px] h-[20px] rounded-[50%] flex justify-center items-center absolute top-[-8px] right-[-10px]"> 5 </span>                                       
                 </a>
                 <button
                 class="flex justify-center items-center flex-row gap-1 text-[#7A7A7A] font-medium text-lg"
@@ -690,7 +692,7 @@
                       <p class="text-fourth-color sm:text-[15px] text-[14px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
                       <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> SKU : HFKUHB58POLMQE </span>
                   </div>
-              </div>
+                </div>
               </div>
           </div>
         </div>
