--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
       </div>
     </div>
     </nav>
-    <div class="sec__navbar justify-between flex-row gap-2 items-center lg:flex hidden">
-      <button class="flex justify-start items-center flex-row gap-2 bg-primary-color text-white rounded-[4px] py-[10px] px-[35px]" >
+    <div class="sec__navbar justify-between flex-row gap-2 items-center lg:flex hidden relative">
+      <button id="toggleButton" class="flex justify-start items-center flex-row gap-2 bg-primary-color text-white rounded-[4px] py-[10px] px-[35px]" >
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5 10H7C9 10 10 9 10 7V5C10 3 9 2 7 2H5C3 2 2 3 2 5V7C2 9 3 10 5 10Z" stroke="#E6EAEF" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
           <path d="M17 10H19C21 10 22 9 22 7V5C22 3 21 2 19 2H17C15 2 14 3 14 5V7C14 9 15 10 17 10Z" stroke="#E6EAEF" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
@@ -169,6 +169,42 @@
         </svg>          
         <span> جميع التصنيفات </span>
       </button>
+      <div id="categoriesList" class="categories__items__list bg-[#fff] p-[20px] rounded-[12px] w-[450px] z-50 absolute top-[60px] right-[35px] ">
+        <div class="row">
+          <div class="col-md-6">
+            <a href="./categories.html">
+              <div class="categories_item flex justify-start items-center flex-row gap-2 z-50 mb-3 py-[8px] px-[15px] rounded-[6px] w-100 h-[50px]">
+                <img src="./assets/images/electr1.png" alt="category" width="30" height="30">
+                <span class="text-third-color font-semibold text-[13px]"> أجهزة و تكنولوجيا</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="./categories.html">
+              <div class="categories_item flex justify-start items-center flex-row gap-2 z-50 mb-3 py-[8px] px-[15px] rounded-[6px] w-100 h-[50px]">
+                <img src="./assets/images/book1.png" alt="category" width="30" height="30">
+                <span class="text-third-color font-semibold text-[13px]"> كتب و مقررات دراسية </span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="./categories.html">
+              <div class="categories_item flex justify-start items-center flex-row gap-2 z-50  py-[8px] px-[15px] rounded-[6px] w-100 h-[50px]">
+                <img src="./assets/images/novel10.jpg" alt="category" width="30" height="30">
+                <span class="text-third-color font-semibold text-[13px]"> كتب عامة و روايات </span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="./categories.html">
+              <div class="categories_item flex justify-start items-center flex-row gap-2 z-50  py-[8px] px-[15px] rounded-[6px] w-100 h-[50px]">
+                <img src="./assets/images/shirt2.webp" alt="category" width="30" height="30">
+                <span class="text-third-color font-semibold text-[13px]"> دعايا و إعلان</span>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
       <ul class="flex justify-start items-center flex-row gap-3 mb-0">
         <li>
           <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
@@ -201,7 +237,7 @@
       </div>
     </div>
     <!-- navbar -->
-    
+
     <!-- header -->
       <header class="sm:p-[20px] p-[15px]">
       <div id="carouselExampleIndicators" class="carousel slide">
@@ -1615,5 +1651,6 @@
       }
     })
     </script>
+
   </body>
 </html>
