--- a/wishlist.html
+++ b/wishlist.html
@@ -213,7 +213,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
@@ -249,7 +253,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
@@ -285,7 +293,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
@@ -321,7 +333,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
@@ -357,7 +373,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
@@ -393,7 +413,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
@@ -429,7 +453,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
@@ -465,7 +493,11 @@
                             <img src="./assets/images/product3.jpg" alt="product" loading="lazy" class="h-[150px] w-100 object-contain">
                         </a>
                         <div class="product__actions flex justify-center items-center flex-row">
-                        <button> <img src="./assets/images/heart.svg" alt="wishlist" loading="lazy" class="w-[20px] h-[20px]"> </button>
+                        <button class="toggleButton">  
+                  <svg class="heartIcon active" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                
+                </button>
                         <button> <img src="./assets/images/eye.svg" alt="eye" loading="lazy" class="w-[20px] h-[20px]" type="button" data-bs-toggle="modal" data-bs-target="#quickView"> </button>
                         </div>
                     </div>
